Se implementa la agruación de productos

--- a/src/assets/styles/components/Card.scss
+++ b/src/assets/styles/components/Card.scss
@@ -20,6 +20,7 @@
     h1 {
       margin: 5px 0 10px 0;
       font-size: 18px;
+      word-break: break-all;
       color: $primary-text-color;
     }
 
