--- a/src/assets/styles/components/CardsContainer.scss
+++ b/src/assets/styles/components/CardsContainer.scss
@@ -1,6 +1,8 @@
 .cards-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-  padding: 20px;
+  &__title {
+    word-break: break-all;
+  }
+
+  &__body {
+  }
 }
