--- a/src/index.scss
+++ b/src/index.scss
@@ -4,3 +4,5 @@
 @import "./assets/styles/components/CardsContainer.scss";
 @import "./assets/styles/components/Card.scss";
 @import "./assets/styles/components/AccountTypeIcon.scss";
+@import "./assets/styles/components/Products.scss";
+@import "./assets/styles/components/DetailsSidebar.scss";
