--- a/src/assets/styles/components/AccountTypeIcon.scss
+++ b/src/assets/styles/components/AccountTypeIcon.scss
@@ -15,7 +15,22 @@
   @include iconCircle();
 }
 
-.ca-icon {
+.credit-icon {
   background-color: #009688;
+  @include iconCircle();
+}
+
+.credit-card-icon {
+  background-color: #ff5722;
+  @include iconCircle();
+}
+
+.current-account-icon {
+  background-color: #795548;
+  @include iconCircle();
+}
+
+.deposit-account-icon {
+  background-color: #3f51b5;
   @include iconCircle();
 }
