--- a/src/assets/styles/components/DetailsSidebar.scss
+++ b/src/assets/styles/components/DetailsSidebar.scss
@@ -1,9 +1,10 @@
-.sidebar {
+.details-sidebar {
   display: flex;
   flex-direction: column;
   width: 15%;
   height: 100vh;
   position: fixed;
+  right: 0;
   box-shadow: 0px 20px 33px 0px rgba(0, 0, 0, 0.5);
   background-color: $primary-color;
   &__logo {
