--- a/src/assets/styles/components/Profilebar.scss
+++ b/src/assets/styles/components/Profilebar.scss
@@ -3,6 +3,7 @@
   justify-content: space-between;
   height: 40px;
   padding: 20px;
+  border-bottom: 1px solid $divider-color;
   &__username {
     display: flex;
     align-items: center;
