--- a/src/assets/styles/components/Card.scss
+++ b/src/assets/styles/components/Card.scss
@@ -1,4 +1,5 @@
 .card {
+  width: 20%;
   margin: 15px 5px;
   padding: 15px;
   box-shadow: 0 1px 6px 0 $divider-color;
@@ -9,17 +10,15 @@
     justify-content: space-between;
     margin-bottom: 20px;
     &__view-details {
-      padding: 0;
-      background-color: transparent;
-      border: none;
       color: $primary-color-dark;
+      @include resetButton();
     }
   }
 
   &__body {
     h1 {
       margin: 5px 0 10px 0;
-      font-size: 18px;
+      font-size: 16px;
       word-break: break-all;
       color: $primary-text-color;
     }
