--- a/src/assets/styles/components/MenuSidebar.scss
+++ b/src/assets/styles/components/MenuSidebar.scss
@@ -1,10 +1,9 @@
-.sidebar {
+.menu-sidebar {
   display: flex;
   flex-direction: column;
   width: 15%;
   height: 100vh;
   position: fixed;
-  box-shadow: 0px 20px 33px 0px rgba(0, 0, 0, 0.5);
   background-color: $primary-color;
   &__logo {
     text-align: center;
