--- a/src/assets/styles/components/DetailsSidebar.scss
+++ b/src/assets/styles/components/DetailsSidebar.scss
@@ -3,9 +3,13 @@
   flex-direction: column;
   width: 20%;
   min-height: 100vh;
+  height: 100%;
   padding: 5px;
+  position: fixed;
   right: 0;
+  overflow: auto;
   box-shadow: 0px 20px 33px 0px rgba(0, 0, 0, 0.5);
+  background-color: $primary-color-text;
   &__header {
     display: flex;
     justify-content: flex-end;
